# BotManosis

./: .breakpoints  archivorandom.txt  descripciones.py  edo_ejercicios.txt  edo_materia.txt  embedfiles.py  main.py  pyproject.toml
Botito/: BotitoPrincipal.py  edo_ejercicios.txt  edo_materia.txt  integrales_ejercicios.txt  main.py
Botito/INSTRUCCIONES_DE_INSTALACION/: CODIGO_TOKEN.txt  LINK INVITACION.txt
Botito/cogs/: Canales_materia.txt  edo.py  ejercicios.py  listatexto.txt
Nutbot/: NutBot.py  derivada_ejercicios.txt
Nutbot/INSTRUCCIONES_DE_INSTALACION/: Instrucciones.txt
Nutbot/cogs/: canalesmateria.py  divulgacion.py  geometria_ejercicios.txt  hola.py  materia.py
